--- a/src/component/SignupScreen/SignupScreen.css
+++ b/src/component/SignupScreen/SignupScreen.css
@@ -45,8 +45,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px;
 }
 
 .form-group input {
     flex: 1;
+}
+
+.input-field {
+    width: 75%;
 }
