--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ ader h1{
   background-color: #008000;
   color: aliceblue;
 }
-#header .animated{
+.animated{
   animation:up-down 2s ease-in-out infinite alternate-reverse both;
 }
 @-webkit-keyframes up-down{
